--- a/src/app/vote/vote-id/vote-id.component.html
+++ b/src/app/vote/vote-id/vote-id.component.html
@@ -3,3 +3,4 @@
     <input [(ngModel)]="title" type="text" class="title" name="title">
     <input type="submit">
 </form>
+<app-next-button></app-next-button>
