--- a/src/app/vote/vote-id/vote-id.component.html
+++ b/src/app/vote/vote-id/vote-id.component.html
@@ -1,4 +1,4 @@
-<img [src]="picture.path" height="300">
+<img *ngIf="picture" [src]="picture.path" height="300">
 <form (submit)="vote()">
     <input [(ngModel)]="title" type="text" class="title" name="title">
     <input type="submit">
