--- a/src/app/archive/view-id/view-id.component.html
+++ b/src/app/archive/view-id/view-id.component.html
@@ -1,1 +1,6 @@
-<p>view-id works!</p>
+<div *ngIf="picture" class="body">
+    <img [src]="picture.path" width="300">
+    <div *ngFor="let title of picture.titles">
+        {{title.title}}: {{title.votes}}
+    </div>
+</div>
