next and previous button

--- a/src/app/archive/view-id/view-id.component.html
+++ b/src/app/archive/view-id/view-id.component.html
@@ -4,3 +4,5 @@
         {{title.title}}: {{title.votes}}
     </div>
 </div>
+<app-next-button [base_url]="base_url"></app-next-button>
+<app-prev-button [base_url]="base_url" [first_url]="first_url"></app-prev-button>
