--- a/src/app/vote/vote-id/vote-id.component.html
+++ b/src/app/vote/vote-id/vote-id.component.html
@@ -4,4 +4,4 @@
     <input type="submit">
 </form>
 <a [routerLink]="['/vote', 'info']">Info</a>
-<app-next-button></app-next-button>
+<app-next-button [base_url]="base_url" [last_url]="'/vote/bye'"></app-next-button>
