--- a/src/app/vote/vote-info/vote-info.component.html
+++ b/src/app/vote/vote-info/vote-info.component.html
@@ -1,5 +1,5 @@
 <p>vote-info works!</p>
-<div *ngIf="continue_id !== -1;else startSurvey">
+<div *ngIf="continue_id!=-1; else startSurvey">
     <a [routerLink]="[base_url, continue_id]">Continue</a>
 </div>
 
