--- a/src/app/general/home/home.component.html
+++ b/src/app/general/home/home.component.html
@@ -1,5 +1,5 @@
 <div>
-    <a routerLink="/archive">Archive</a>
+    <a routerLink="/archive">Archiv</a>
 </div>
 <div>
     <a routerLink="/vote">Umfrage</a>
