--- a/src/app/archive/view-id/view-id.component.html
+++ b/src/app/archive/view-id/view-id.component.html
@@ -5,4 +5,7 @@
     </div>
 </div>
 <app-next-button [base_url]="base_url"></app-next-button>
-<app-prev-button [base_url]="base_url" [first_url]="first_url"></app-prev-button>
+<app-prev-button [base_url]="base_url"></app-prev-button>
+<div>
+    <a routerLink="/archive">Archiv</a>
+</div>
