added links to other models

--- a/src/app/draw/draw/draw.component.html
+++ b/src/app/draw/draw/draw.component.html
@@ -5,5 +5,11 @@
     </canvas>
 </div>
 {{result}}
+<div *ngFor="let model of model_list">
+    <a [routerLink]="['/draw', model]">{{model}}</a>
+</div>
 <button (click)="submit()">Submit</button>
 <button (click)="clearCanvas()">Clear</button>
+<div>
+    Result: {{result}}
+</div>
