added position indicator

--- a/src/app/vote/vote-id/vote-id.component.html
+++ b/src/app/vote/vote-id/vote-id.component.html
@@ -6,3 +6,4 @@
 
 <a [routerLink]="['/vote', 'info']">Info</a>
 <app-next-button [base_url]="base_url" [last_url]="'/vote/bye'"></app-next-button>
+<app-position></app-position>
