--- a/src/app/archive/view-id/view-id.component.html
+++ b/src/app/archive/view-id/view-id.component.html
@@ -7,6 +7,8 @@
 <br>
 <br>
 
+<app-position></app-position>
+
 <app-next-button [base_url]="base_url"></app-next-button>
 <app-prev-button [base_url]="base_url"></app-prev-button>
 <div>
