added small text

--- a/src/app/vote/vote-info/vote-info.component.html
+++ b/src/app/vote/vote-info/vote-info.component.html
@@ -1,4 +1,4 @@
-<p>vote-info works!</p>
+Generelle information zur umfrage
 <div *ngIf="!isNaN(continue_id); else startSurvey">
     <a [routerLink]="[base_url, continue_id]">Continue</a>
 </div>
