--- a/src/app/vote/vote-info/vote-info.component.scss
+++ b/src/app/vote/vote-info/vote-info.component.scss
@@ -1,15 +1,10 @@
+@import "../../../styles.scss";
+
 .container{
     max-width: 720px;
     margin: auto;
 
     .title{
         margin-top: 50px;
-        font-family: Lato;
-        font-size: 32px;
-    }
-
-    .text{
-        margin-top: 10px;
-        font-family: merriweather;
     }
 }
