--- a/src/app/vote/vote-id/vote-id.component.html
+++ b/src/app/vote/vote-id/vote-id.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="img_input">
-        <img *ngIf="picture" [src]="picture.path" height="300">
+        <img *ngIf="picture" [src]="picture.url" height="300">
         <form (submit)="vote()">
             <input [(ngModel)]="title" type="text" class="title" name="title">
             <input type="submit" value="senden">
