--- a/src/app/vote/vote-info/vote-info.component.html
+++ b/src/app/vote/vote-info/vote-info.component.html
@@ -6,14 +6,15 @@
     <div class="text">
         Es folgen fünfzig isolierte Zeichen aus handgeschriebenen Texten. Sie ergeben wenig Sinn ohne ihren
         ursprünglichen
-        Kontext und sind deshalb interpretationsbedürftige Bilder.<br>
+        Kontext und sind deshalb interpretationsbedürftige Bilder.
+        <br><br>
         Gib ihnen neuen Sinn, indem du benennst, was du siehst. Vielleicht kannst du das Geschriebene entziffern?
-        Vielleicht
-        aber hast du freie Assoziationen, ähnlich wie bei einem Rorschacher Test. Fühle dich frei in deiner
-        Interpretation.<br>
+        Vielleicht aber hast du freie Assoziationen, ähnlich wie bei einem Rorschacher Test. Fühle dich frei in deiner
+        Interpretation.
+        <br><br>
         Im Textfeld unter dem jeweiligen Bild teilst du in eigenen Worten, was du siehst und gelangst mit «senden» zur
-        nächsten Geste. Falls du keine Idee hast, dann kannst du das Bild auch mit «skip» überspringen.
-        Drücke «start» und es kann losgehen!
+        nächsten Geste. Falls du keine Idee hast, dann kannst du das Bild auch mit «next» überspringen.
+        Drücke «Umfrage» und es kann losgehen!
     </div>
 
 
