--- a/src/app/vote/vote-info/vote-info.component.scss
+++ b/src/app/vote/vote-info/vote-info.component.scss
@@ -8,3 +8,10 @@
         margin-top: 50px;
     }
 }
+
+.link-container{
+    margin-top: 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
