updated archive to archiv

--- a/src/app/archive/view-all/view-all.component.html
+++ b/src/app/archive/view-all/view-all.component.html
@@ -18,7 +18,7 @@
     <div class="list">
         <div class="img-container" *ngFor="let p of pictures">
             <div class="overlay"></div>
-            <img [src]="p.url" [routerLink]="['/archive', p.id]">
+            <img [src]="p.url" [routerLink]="['/archiv', p.id]">
         </div>
     </div>
 </div>
