--- a/src/app/archive/view-id/view-id.component.html
+++ b/src/app/archive/view-id/view-id.component.html
@@ -12,5 +12,5 @@
 <app-next-button [base_url]="base_url"></app-next-button>
 <app-prev-button [base_url]="base_url"></app-prev-button>
 <div>
-    <a routerLink="/archive">Archiv</a>
+    <a routerLink="/archiv">Archiv</a>
 </div>
