--- a/src/app/vote/vote-id/vote-id.component.html
+++ b/src/app/vote/vote-id/vote-id.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="img_input">
-        <img *ngIf="picture" [src]="picture.url" height="300">
+        <img *ngIf="picture" [src]="picture.url">
+        <app-position></app-position>
         <form (submit)="vote()">
             <input [(ngModel)]="title" type="text" class="title" name="title">
             <input type="submit" value="senden">
@@ -9,6 +10,5 @@
     <div class="text">
         <a [routerLink]="['/vote', 'info']">Info</a>
         <app-next-button [base_url]="base_url" [last_url]="'/vote/bye'"></app-next-button>
-        <app-position></app-position>
     </div>
 </div>
