--- a/src/app/shared/next-button/next-button.component.html
+++ b/src/app/shared/next-button/next-button.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="!isNaN(next_id);else goToLast">
-    <a [routerLink]="[base_url, next_id]">Next</a>
+    <mat-icon [routerLink]="[base_url, next_id]">keyboard_arrow_right</mat-icon>
 </div>
 
 <ng-template #goToLast>
     <div *ngIf="last_url">
-        <a [routerLink]="last_url">Bye</a>
+        <mat-icon class="keyboard-arrow-right" [routerLink]="last_url">keyboard_arrow_right</mat-icon>
     </div>
 </ng-template>
