--- a/src/app/vote/vote-id/vote-id.component.scss
+++ b/src/app/vote/vote-id/vote-id.component.scss
@@ -1,22 +1,47 @@
 .container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     max-width: 1400px;
     padding: 0px 20px 0px 20px;
     margin:auto;
+    justify-content: space-around;;
+}
+
+.side-container{
+    width: 40px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.right mat-icon{
+    font-size: 30px;
 }
 
 .img_input{
     display:flex;
     flex-direction: column;
     justify-content: space-around;
-    margin: auto;
+}
+
+.img_input img{
+    height:300px;
+}
+
+.img_input app-position{
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .img_input form{
     display: flex;
     flex-direction: column;
     max-width: 720px;
+}
+
+.img_input a{
+    text-align: center;
+    margin-top: 20px;
 }
 
 .img_input form input[type=submit]{
