--- a/src/app/vote/vote-info/vote-info.component.html
+++ b/src/app/vote/vote-info/vote-info.component.html
@@ -41,5 +41,5 @@
     </div>
 </div>
 <div class="background">
-    <img *ngFor="let p of pictures" [src]="p.url" #backgroundImage>
+    <img *ngFor="let p of backgroundPictures" [src]="p.url" #backgroundImage>
 </div>
