--- a/src/app/vote/vote-id/vote-id.component.scss
+++ b/src/app/vote/vote-id/vote-id.component.scss
@@ -4,6 +4,7 @@
     max-width: 1400px;
     padding: 0px 20px 0px 20px;
     margin:auto;
+    margin-top: 90px;
     justify-content: space-around;;
 }
 
