--- a/src/app/archive/view-id/view-id.component.html
+++ b/src/app/archive/view-id/view-id.component.html
@@ -18,7 +18,7 @@
                     Baseline Interpretationen
                 </div>
                 <div *ngFor="let title of picture.baseline_titles" class="baseline-interpretation interpretation">
-                    {{title.title}}: {{title.votes  | number:'1.2-2'}} %
+                    {{title.title}}
                 </div>
             </div>
             <div class="seq2seq-titles">
