--- a/src/app/archive/view-id/view-id.component.scss
+++ b/src/app/archive/view-id/view-id.component.scss
@@ -41,7 +41,14 @@
     padding-top:10px;
 }
 
+.human-titles .newest{
+    font-weight: bold;
+}
 
+.human-titles .sorted{
+    margin-top: 15px;
+    font-weight: bold;
+}
 
 img{
     display:block;
