--- a/src/app/archive/view-all/view-all.component.html
+++ b/src/app/archive/view-all/view-all.component.html
@@ -4,15 +4,18 @@
             Lorem ipsum dolor sit amet
         </div>
         <div class="text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at ipsum hendrerit, venenatis ante sed,
-            maximus est. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean orci velit, malesuada nec
-            bibendum ut, egestas at dui. Aliquam maximus sed sapien id blandit. Morbi nec venenatis sapien. Nam et massa
-            metus. Integer scelerisque, mauris et dignissim hendrerit, nisi nibh hendrerit arcu, in congue libero justo
-            in neque. Fusce malesuada porta quam, vel ornare nibh auctor ac. Maecenas malesuada, sem in dapibus
-            imperdiet, dui elit pharetra nisl, vitae sodales erat tortor accumsan lectus. Praesent ultrices vehicula
-            nisl et sollicitudin. Curabitur feugiat elit id aliquet finibus. Aliquam a condimentum odio. Etiam pulvinar
-            euismod nulla, sit amet bibendum diam viverra a. Vivamus consectetur orci in nulla volutpat, vel sodales
-            risus blandit.
+            Hier findest du alle 48 Schriftfragmente der Umfrage. Mit Klick auf das jeweilige Bild gelangst du zu den
+            bisher gesammelten Interpretationen der Website-Probanden. Ihnen werden die Interpretation zwei
+            verschiedener Arten von maschineller Schriftinterpretation gegenübergestellt. Die «Baseline» Interpretation
+            versucht in den Bildfragmenten Buchstaben zu entschlüsseln. Die «Sequenz to Sequenz» Interpretation (kurz:
+            «Seq2Seq») versucht basierend auf die erkannten Buchstaben sinnvolle Worte zu formen.<br>
+            Im Fokus von «Machine Learning» sind Algorithmen die Daten analysieren, von ihnen lernen und dann
+            Voraussagen treffen können. «Deep Learning», ein Teilbereich des «Machine Learning», befasst sich mit
+            neuralen Netzwerken.<br>
+            Die neuronalen Netzwerke sind ein sehr grobes Model davon wie Neuronen funktionieren. Jedes Neuron hat
+            Verbindungen zu anderen Neuronen und leitet Signale weiter. Werden mehrere Schichten von so verbundenen
+            Neuronen aufeinandergelegt spricht man von „Deep Learning“, in unserem Falle «Deep Writing». Diese Schichten
+            lassen sich auf verschiedene Arten kombinieren, um gewünschte Ziele zu erreichen.
         </div>
     </div>
     <div class="list">
