--- a/src/app/vote/vote-info/vote-info.component.html
+++ b/src/app/vote/vote-info/vote-info.component.html
@@ -5,19 +5,18 @@
         </div>
 
         <div class="text">
-            Es folgen fünfzig isolierte Zeichen aus handgeschriebenen Texten. Sie ergeben wenig Sinn ohne ihren
-            ursprünglichen
-            Kontext und sind deshalb interpretationsbedürftige Bilder.
-            <br><br>
-            Gib ihnen neuen Sinn, indem du benennst, was du siehst. Vielleicht kannst du das Geschriebene entziffern?
-            Vielleicht aber hast du freie Assoziationen, ähnlich wie bei einem Rorschacher Test. Fühle dich frei in
-            deiner
-            Interpretation.
-            <br><br>
-            Im Textfeld unter dem jeweiligen Bild teilst du in eigenen Worten, was du siehst und gelangst mit «senden»
-            zur
-            nächsten Geste. Falls du keine Idee hast, dann kannst du das Bild auch mit «next» überspringen.
-            Drücke «Umfrage» und es kann losgehen!
+            Vielen Dank, nimmst du an meinem Bachelorprojekt teil!
+            Im Rahmen des Diplomprojekts des Bachelor Art Education der ZHdK befragen wir Olivia Büchel und Martin
+            Villavicencio den Prozess der Bildbetrachtung. Diese Website zeigt eine Umfrage mit 48 Schriftzeichen, die
+            aus handgeschriebenen Texten entnommen wurden und auf weissem Hintergrund zur Interpretation präsentiert
+            werden.<br>
+            Was siehst du in den Bildern? Kannst du das Geschriebene noch lesen? Oder siehst du bereits abstrakte
+            Objekte, Handlungen oder Menschen? Beschreibe deine Assoziationen im Eingabefeld und nimm so am
+            Bachelorprojekt teil.<br>
+            Im Archiv steht deine und die Bildentschlüsselung anderer Probanden einer Maschine gegenüber. Ein von Martin
+            Villavicencio entwickeltes Deep-Wiritig-Programm kann die Textfragmente basierend auf künstlicher
+            Intelligenz in digitale Schrift umwandeln. Im Vergleich mit der menschlichen Interpretation eröffnet sich
+            Frage: Betreibt die Maschine Bildbetrachtung?
         </div>
 
         <div class="link-container">
