added title to archive

--- a/src/app/archive/view-all/view-all.component.html
+++ b/src/app/archive/view-all/view-all.component.html
@@ -1,7 +1,7 @@
 <div class="body">
     <div class="text-container">
         <div class="title">
-            Lorem ipsum dolor sit amet
+            Die Bilder im Überblick
         </div>
         <div class="text">
             Hier findest du alle 48 Schriftfragmente der Umfrage. Mit Klick auf das jeweilige Bild gelangst du zu den
