fixed infinite loop bug in hoomepage

--- a/src/app/vote/vote-info/vote-info.component.html
+++ b/src/app/vote/vote-info/vote-info.component.html
@@ -39,5 +39,5 @@
     </div>
 </div>
 <div class="background">
-    <img *ngFor="let p of backgroundPictures" [src]="p.url" #backgroundImage>
+    <img *ngFor="let p of backgroundPictures" [src]="p.url" [style.height.px]="imageHeight" #backgroundImage>
 </div>
