--- a/src/app/vote/vote-id/vote-id.component.scss
+++ b/src/app/vote/vote-id/vote-id.component.scss
@@ -15,8 +15,13 @@
     align-items: center;
 }
 
-.right mat-icon{
+mat-icon{
     font-size: 30px;
+    margin-left: 10px;
+}
+
+mat-icon:hover{
+    cursor: pointer;
 }
 
 .img_input{
